# lista-tareas

./: README.md  db.py  init_db.py  main.py  main_backup.py  pyproject.toml  todo.db
templates/: base.html  index.html
templates/partials/: lista_tareas.html
