[project]
name = "lista-tareas"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.116.1",
    "psycopg2-binary>=2.9.10",
    "sqlalchemy>=2.0.43",
    "jinja2>=3.1.0",
    "python-multipart>=0.0.5",
]
